# Compressed-FM-Index-implementation-with-learned-optimizations

./: .gitignore  README.md  example.txt  quick_run.ps1  run_all_tests.ps1  run_demo.ps1  sample.txt
research_code_collection/: CMakeLists.txt  README.md  config.hpp
research_code_collection/api/: fm_index.cpp
research_code_collection/core/: bitvector.cpp  bitvector_learned.cpp  ssa.hpp  wavelet.cpp  wavelet.hpp  wavelet_learned.hpp
research_code_collection/layout/: veb.hpp
research_code_collection/learned/: pgm.hpp
research_code_collection/serialization/: serialization.cpp  serialization.hpp
research_code_collection/tests/: fm_search_tests.cpp  quick_serial_test.cpp
research_code_collection/tools/: benchmark.cpp  build_index.cpp
research_code_collection/util/: bitops.hpp  timer.hpp
src/: version.hpp
src/api/: fm_index.hpp
src/core/: bitvector.cpp  bitvector.hpp  bitvector_learned.hpp  bwt.hpp  sais.hpp  ssa.cpp  wavelet.cpp  wavelet_learned.cpp
src/util/: io.hpp
tests/: bitvector_tests.cpp  debug_fm.cpp  learned_occ_tests.cpp  serialization_tests.cpp  simple_serial_test.cpp  simple_tests.cpp  veb_layout_tests.cpp  wavelet_tests.cpp
tools/: bench.cpp  query_cli.cpp
